--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,29 @@
-*{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   overflow-x: hidden;
+ /* Import css files */
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
 
-}
+
+
 
 .input-box-shadow{
    filter: drop-shadow(-4px -4px 44px rgba(0, 0, 0, 0.08));
+}
+
+
+.slick-prev:before, 
+.slick-next:before {
+     color: black;
+     font-size: 40px;
+}
+
+.slick-next:before{
+  margin-left:-35px;
+}
+
+.slick-prev{
+  z-index: 999;
+}
+
+.background{
+  background-color: antiquewhite;
 }
